--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,7 @@
 	</div>
 	
 	<div class="col-md-4">
-	<%= render  template: "home/user_cell"%>
+	<%= render "home/user_cell"%>
 	</div>
 </div>
 </div>
