--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
 		</div>
 	</nav>
 	
-	<div class="container">
+	<div class="container flash_messages">
 		<%if flash[:notice]%>
 	   	  <div class="alert alert-success alert-dismissable">
 		    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
