--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,28 +1,3 @@
 <div class="container">
-	<%= form_for Post.new  do | f |%>
-	<div class="row">
-		<%= f.label "学校:"%>
-		<%= f.select :school_id, options_for_select(School.all.map {|s| [s.name, s.id]})%>
-	</div>
-	<div class="row">
-		<%= f.label "类别:"%>
-		<%= f.select :category_id, options_for_select(Category.all.map {|s| [s.name, s.id]})%>
-	</div>
-	<div class="row">
-		<%= f.text_field :title, placeholder: "标题", required: true %>
-	</div>
-	<div class="row">
-		<%= f.text_area :content, placeholder: "内容", required: true %>
-	</div>
-	<div class="row">
-		<%= f.text_field :contact, placeholder: "手机/QQ", required: true %>
-	</div>
-	<div class="row">
-		<%= f.label "价格:"%>
-		<%= f.text_field :price, required: true %>
-	</div>
-	<div class="row">
-		<%= f.submit%>
-	</div>
-	<% end %>
+  <%= render "form", post: @post %>
 </div>
