--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,17 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<div class="container">
+	<div class="row">
+		<%= @post.title %>
+	</div>
+	
+	<div class="row">
+		<%= @post.content %>
+	</div>
+
+	<div class="row">
+		<%= @post.contact %>
+	</div>
+
+	<div class="row">
+		<%= @post.price %>
+	</div>
+</div>
