--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,50 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.tradeArea {
+	background: white;
+	border-radius: 4px;
+	padding-bottom: 20px;
+	
+	.category {
+		margin-top: 10px;
+		padding-bottom: 10px;
+		border-bottom: solid 1px #e2e2e2;
+		
+		a {
+			color: black;
+			padding: 5px;
+			margin-right: 50px;
+			border-radius: 5px;
+		}
+		a:hover {
+			text-decoration: none;
+			background: #e2e2e2;
+		}
+		
+		a.active {
+			color: white;
+			background: black;
+		}
+	}
+	
+	.tradeList {
+		padding-top: 5px;
+		
+		.tradeItem {
+			.title a{
+				font-size: 16px;
+				color: #778087 !important;
+			}
+			.price {
+				display: inline-block;
+				background: #778087;
+				color: white;
+				font-size: 16px;
+				padding: 0px 10px 0px 10px;
+				border-radius: 2px;				
+			}
+		}
+	}
+}
