--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-	<div class="tradeArea col-md-7">
+	<div class="tradeArea col-md-7 col-sm-9">
 		<div class="category">
 			<%= link_to "全部", posts_path, class: "active" %>
 			<% Category.all.each do |i| %>
@@ -10,10 +10,10 @@
 		<div class="tradeList">
 			<% @posts.each do |post|%>
 				<div class="tradeItem row">
-					<div class="title col-md-8">
+					<div class="title col-md-8 col-sm-8">
 					  <%= link_to post.title, post_path(post)%>
 				  </div>
-					<div class="col-md-2 col-md-offset-2">
+					<div class="col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2">
 						<div class="price">
 					      <%= post.price.to_i%>
 				        </div>
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	
-	<div class="col-md-2 col-md-offset-3">
+	<div class="col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-1">
 	<%= render "home/user_cell"%>
 	</div>
 </div>
