--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,44 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user_box {
+	background: white;
+  height: 150px;
+  display: block;
+  border-radius: 5px;
+  
+  .name {
+    font-size: 17px;
+    text-align: center;
+    color: #778087;
+  }
+  
+  .posts_count {
+    margin-top: 15px;
+    font-size: 25px;
+    text-align: center;
+    a {
+      color: grey;
+    }
+    a:hover {
+			text-decoration: none;
+    }
+  }
+  .text {
+    text-align: center;
+    color: grey;
+  }
+  .user_posts {
+    cursor: pointer;
+  }
+  
+  .new_post {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 20px;
+    a {
+      color: red;
+    }
+  }
+}
