--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -15,7 +15,7 @@
 		a {
 			color: black;
 			padding: 5px;
-			margin-right: 50px;
+			margin-right: 40px;
 			border-radius: 5px;
 		}
 		a:hover {
@@ -37,7 +37,7 @@
 			border-bottom: solid 1px #e2e2e2;
 			
 			
-			.title a{
+			.title > a{
 				word-wrap:break-word;
 				font-size: 16px;
 				color: #778087 !important;
@@ -50,8 +50,27 @@
 				padding: 0px 10px 0px 10px;
 				border-radius: 15px;
 				margin: 0 auto;
-			    vertical-align: middle;
+			  vertical-align: middle;
 			}
+			
+      .extra_info {
+        margin-top: 5px;
+        
+  			.school {
+          display: inline-block;
+  				background: #e2e2e2;
+          border-radius: 5px;
+          margin-right: 10px;
+          a {
+            font-size: 14px;
+    				color: #778087 !important;          
+          }
+  			}
+        .time {
+          display: inline-block;
+          color: #ccc;
+        }
+      }
 		}
 	}
 }
