--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-	<div class="tradeArea col-md-7 col-sm-9">
+	<div class="tradeArea col-md-8 col-sm-8">
 		<div class="category">
 			<%= link_to "全部", posts_path, class: "active" %>
 			<% Category.all.each do |i| %>
@@ -12,10 +12,14 @@
 				<div class="tradeItem row">
 					<div class="title col-md-8 col-sm-8">
 					  <%= link_to post.title, post_path(post)%>
-					  <div>
-						  <%= link_to post.school.name, posts_path(school: post.school.id, tab: @tab) %>
-						  <%= time_ago_in_words post.created_at %>
-					  </div>
+					  <div class="extra_info">
+						  <div class="school">
+						    <%= link_to post.school.name, posts_path(school: post.school.id, tab: @tab) %>
+              </div>
+              <div class="time">
+						    <%= time_ago_in_words post.created_at %>
+              </div>
+            </div>
 				  </div>
 					<div class="col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2">
 						<div class="price">
@@ -27,7 +31,7 @@
 		</div>
 	</div>
 	
-	<div class="col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-1">
+	<div class="col-md-3 col-md-offset-1 col-sm-3 col-sm-offset-1">
 	<%= render "home/user_cell"%>
 	</div>
 </div>
