--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<form class="navbar-form navbar-left" role="search">
 					<div class="form-group">
-						<input type="text" class="form-control" placeholder="搜索">
+						<input type="text" class="form-control" name="search" placeholder="搜索">
 					</div>
 				</form>
 				<ul class="nav navbar-nav navbar-right">
