--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -6,12 +6,12 @@
 	background: white;
 	border-radius: 4px;
 	padding-bottom: 20px;
-	
+
 	.category {
 		margin-top: 10px;
 		padding-bottom: 10px;
 		border-bottom: solid 1px #e2e2e2;
-		
+
 		a {
 			color: black;
 			padding: 5px;
@@ -22,21 +22,21 @@
 			text-decoration: none;
 			background: #e2e2e2;
 		}
-		
+
 		a.active {
 			color: white;
 			background: black;
 		}
 	}
-	
+
 	.tradeList {
 		padding-top: 5px;
-		
+
 		.tradeItem {
 			padding: 10px 0px 10px 0px;
 			border-bottom: solid 1px #e2e2e2;
-			
-			
+
+
 			.title > a{
 				word-wrap:break-word;
 				font-size: 16px;
@@ -52,10 +52,10 @@
 				margin: 0 auto;
 			  vertical-align: middle;
 			}
-			
+
       .extra_info {
         margin-top: 5px;
-        
+
   			.school {
           display: inline-block;
   				background: #e2e2e2;
@@ -63,7 +63,7 @@
           margin-right: 10px;
           a {
             font-size: 14px;
-    				color: #778087 !important;          
+    				color: #778087 !important;
           }
   			}
         .time {
@@ -72,5 +72,34 @@
         }
       }
 		}
+	}
+}
+
+
+
+.trade_detail {
+	.title_area {
+		background: white;
+		border-radius: 4px;
+		padding-bottom: 10px;
+		margin-bottom: 20px;
+
+		.price {
+			color: red;
+		}
+	}
+
+	.content_area {
+		background: white;
+		margin-bottom: 20px;
+	}
+
+	.contact_area {
+		padding: 10px;
+		border-radius: 4px;
+
+
+		font-size: 20px;
+		background: white;
 	}
 }
