--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -84,6 +84,9 @@
 		padding-bottom: 10px;
 		margin-bottom: 20px;
 
+    .title {
+			word-wrap:break-word;
+    }
 		.price {
 			color: red;
 		}
@@ -102,4 +105,19 @@
 		font-size: 20px;
 		background: white;
 	}
+}
+
+#editor {
+  margin-top: 10px;
+  height: 500px;
+  overflow:scroll;
+  max-height:500px;
+  background: white;
+  
+}
+
+form {
+  .title {
+    margin-bottom: 20px;
+  }
 }
