--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,26 +1,126 @@
 <%= form_for post  do | f |%>
-<div class="row">
-	<%= f.label "学校:"%>
-	<%= f.select :school_id, options_for_select(School.all.map {|s| [s.name, s.id]})%>
+<div class="form-group">
+  <%= f.label "标题"%>
+  <div class="title">
+	<%= f.text_field :title, class: "form-control"%>
+  </div>
 </div>
-<div class="row">
-	<%= f.label "类别:"%>
-	<%= f.select :category_id, options_for_select(Category.all.map {|s| [s.name, s.id]})%>
-</div>
-<div class="row">
-	<%= f.text_field :title, placeholder: "标题", required: true %>
-</div>
-<div class="row">
-	<%= f.text_area :content, placeholder: "内容", required: true%>
-</div>
-<div class="row">
-	<%= f.text_field :contact, placeholder: "手机/QQ", required: true %>
-</div>
-<div class="row">
+<div class="form-group">
+    <div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
+          <div class="btn-group">
+            <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="" data-original-title="字体"><i class="glyphicon glyphicon-font"></i><b class="caret"></b></a>
+              <ul class="dropdown-menu">
+              <li><a data-edit="fontName Serif" style="font-family:'Serif'">Serif</a></li><li><a data-edit="fontName Sans" style="font-family:'Sans'">Sans</a></li><li><a data-edit="fontName Arial" style="font-family:'Arial'">Arial</a></li><li><a data-edit="fontName Arial Black" style="font-family:'Arial Black'">Arial Black</a></li><li><a data-edit="fontName Courier" style="font-family:'Courier'">Courier</a></li><li><a data-edit="fontName Courier New" style="font-family:'Courier New'">Courier New</a></li><li><a data-edit="fontName Comic Sans MS" style="font-family:'Comic Sans MS'">Comic Sans MS</a></li><li><a data-edit="fontName Helvetica" style="font-family:'Helvetica'">Helvetica</a></li><li><a data-edit="fontName Impact" style="font-family:'Impact'">Impact</a></li><li><a data-edit="fontName Lucida Grande" style="font-family:'Lucida Grande'">Lucida Grande</a></li><li><a data-edit="fontName Lucida Sans" style="font-family:'Lucida Sans'">Lucida Sans</a></li><li><a data-edit="fontName Tahoma" style="font-family:'Tahoma'">Tahoma</a></li><li><a data-edit="fontName Times" style="font-family:'Times'">Times</a></li><li><a data-edit="fontName Times New Roman" style="font-family:'Times New Roman'">Times New Roman</a></li><li><a data-edit="fontName Verdana" style="font-family:'Verdana'">Verdana</a></li></ul>
+          </div>
+          <div class="btn-group">
+            <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="" data-original-title="字体大小"><i class="glyphicon glyphicon-text-height"></i>&nbsp;<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+              <li><a data-edit="fontSize 5"><font size="5">大</font></a></li>
+              <li><a data-edit="fontSize 3"><font size="3">中</font></a></li>
+              <li><a data-edit="fontSize 1"><font size="1">小</font></a></li>
+              </ul>
+          </div>
+          <div class="btn-group">
+            <a class="btn btn-default" data-edit="bold" title="" data-original-title="加粗 (Ctrl/Cmd+B)"><i class="glyphicon glyphicon-bold"></i></a>
+            <a class="btn btn-default" data-edit="italic" title="" data-original-title="斜体 (Ctrl/Cmd+I)"><i class="glyphicon glyphicon-italic"></i></a>
+            <a class="btn btn-default" data-edit="underline" title="" data-original-title="下划线 (Ctrl/Cmd+U)"><i class="glyphicon glyphicon-text-width"></i></a>
+          </div>
+          <div class="btn-group">
+            <a class="btn btn-default" data-edit="insertunorderedlist" title="" data-original-title="无序列表"><i class="glyphicon glyphicon-list"></i></a>
+            <a class="btn btn-default" data-edit="insertorderedlist" title="" data-original-title="有序列表"><i class="glyphicon glyphicon-list-alt"></i></a>
+            <a class="btn btn-default" data-edit="outdent" title="" data-original-title="左移 (Shift+Tab)"><i class="glyphicon glyphicon-indent-left"></i></a>
+            <a class="btn btn-default" data-edit="indent" title="" data-original-title="右移 (Tab)"><i class="glyphicon glyphicon-indent-right"></i></a>
+          </div>
+          <div class="btn-group">
+            <a class="btn btn-default" data-edit="justifyleft" title="" data-original-title="左对齐 (Ctrl/Cmd+L)"><i class="glyphicon glyphicon-align-left"></i></a>
+            <a class="btn btn-default" data-edit="justifycenter" title="" data-original-title="居中 (Ctrl/Cmd+E)"><i class="glyphicon glyphicon-align-center"></i></a>
+            <a class="btn btn-default" data-edit="justifyright" title="" data-original-title="右对齐 (Ctrl/Cmd+R)"><i class="glyphicon glyphicon-align-right"></i></a>
+            <a class="btn btn-default" data-edit="justifyfull" title="" data-original-title="两端对齐 (Ctrl/Cmd+J)"><i class="glyphicon glyphicon-align-justify"></i></a>
+          </div>
+          <div class="btn-group">
+          <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="" data-original-title="超链接"><i class="glyphicon glyphicon-link"></i></a>
+            <div class="dropdown-menu input-append">
+              <input class="span2" placeholder="URL" type="text" data-edit="createLink">
+              <button class="btn" type="button">增加</button>
+            </div>
+            <a class="btn btn-default" data-edit="unlink" title="" data-original-title="删除超链接"><i class="glyphicon glyphicon-remove"></i></a>
+
+          </div>
+
+          <div class="btn-group">
+            <a class="btn btn-default" title="" id="pictureBtn" data-original-title="插入图片(or just drag &amp; drop)"><i class="glyphicon glyphicon-picture"></i></a>
+            <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" style="opacity: 0; position: absolute; top: 0px; left: 0px; width: 37px; height: 30px;">
+          </div>
+          <div class="btn-group">
+            <a class="btn btn-default" data-edit="undo" title="" data-original-title="撤销 (Ctrl/Cmd+Z)"><i class="glyphicon glyphicon-backward"></i></a>
+            <a class="btn btn-default" data-edit="redo" title="" data-original-title="重做 (Ctrl/Cmd+Y)"><i class="glyphicon glyphicon-forward"></i></a>
+          </div>
+    </div>
+
+
+  <div id="editor">
+  </div>
+  
+	<%= f.text_area :content, id: "form_content", style: "display: none;"%>
+  </div>
+  <div class="form-group">
+	<%= f.label "联系方式(手机/QQ)"%>
+	<%= f.text_field :contact, required: true, class: "form-control" %>
+  </div>
+  <div class="form-group">
 	<%= f.label "价格:"%>
-	<%= f.text_field :price, required: true %>
-</div>
-<div class="row">
-	<%= f.submit "确定"%>
-</div>
+	<%= f.text_field :price, required: true, class: "form-control" %>
+  </div>
+  <div class="form-group">
+	<%= f.label "学校:"%>
+	<%= f.select :school_id, options_for_select(School.all.map {|s| [s.name, s.id]}), {}, class: "form-control"%>
+  </div>
+  <div class="form-group">
+	<%= f.label "类别:"%>
+	<%= f.select :category_id, options_for_select(Category.all.map {|s| [s.name, s.id]}), {}, class: "form-control"%>
+  </div>
+	<button type="submit" class="btn btn-primary" id="submit_form">确定</button>
 <% end %>
+
+
+
+<script>
+  $(function(){
+    function initToolbarBootstrapBindings() {
+      var fonts = ['Serif', 'Sans', 'Arial', 'Arial Black', 'Courier', 
+            'Courier New', 'Comic Sans MS', 'Helvetica', 'Impact', 'Lucida Grande', 'Lucida Sans', 'Tahoma', 'Times',
+            'Times New Roman', 'Verdana'],
+            fontTarget = $('[title=Font]').siblings('.dropdown-menu');
+      $.each(fonts, function (idx, fontName) {
+          fontTarget.append($('<li><a data-edit="fontName ' + fontName +'" style="font-family:\''+ fontName +'\'">'+fontName + '</a></li>'));
+      });
+      $('a[title]').tooltip({container:'body'});
+    	$('.dropdown-menu input').click(function() {return false;})
+		    .change(function () {$(this).parent('.dropdown-menu').siblings('.dropdown-toggle').dropdown('toggle');})
+        .keydown('esc', function () {this.value='';$(this).change();});
+
+      $('[data-role=magic-overlay]').each(function () { 
+        var overlay = $(this), target = $(overlay.data('target')); 
+        overlay.css('opacity', 0).css('position', 'absolute').offset(target.offset()).width(target.outerWidth()).height(target.outerHeight());
+      });
+	};
+	function showErrorAlert (reason, detail) {
+		var msg='';
+		if (reason==='unsupported-file-type') { msg = "Unsupported format " +detail; }
+		else {
+			console.log("error uploading file", reason, detail);
+		}
+		$('<div class="alert"> <button type="button" class="close" data-dismiss="alert">&times;</button>'+ 
+		 '<strong>File upload error</strong> '+msg+' </div>').prependTo('#alerts');
+	};
+    initToolbarBootstrapBindings();  
+	$('#editor').wysiwyg({ fileUploadError: showErrorAlert} );
+    window.prettyPrint && prettyPrint();
+  
+    $("#submit_form").click(function(){
+      $("#form_content").val($('#editor').cleanHtml());
+      
+      $("form").first().submit();
+    });
+  });
+</script>
