--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
 	</div>
 
 	<div class="content_area col-md-8">
-			<%= @post.content %>
+			<%= @post.content.html_safe %>
 	</div>
 
 	<div class="contact_area col-md-8">
