--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -121,3 +121,15 @@ form {
     margin-bottom: 20px;
   }
 }
+
+.bg_white {
+	background: white;
+}
+
+table.posts {
+  margin-top: 20px;
+}
+
+.nav.nav-tabs {
+  margin-top: 20px;
+}
