--- a/app/views/posts/self.html.erb
+++ b/app/views/posts/self.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container bg_white">
 	
 	<ul class="nav nav-tabs">
 	  <li class="active"><%= link_to "显示中的帖子", posts_self_path %> </li>
@@ -10,19 +10,15 @@
 	<div>
 	</div>
 	<% else %>
+  <table class="posts table table-hover">
 	<% @posts.each do | post | %>
-	
-	  <div class="row">
-  		  <div class="col-md-4">
-		   	  <%= link_to post.title, post_path(post)%>
-		  </div>
-		  <div class="col-md-2">
-			  <%= link_to "修改", edit_post_path(post)%>
-		  </div>
-		  <div class="col-md-2">
-			  <%= link_to "删除", post_path(post), method: :delete, data: {confirm: "你确定要删除这条信息么"}%>
-		  </div>
-	  </div>
+  <tr>
+		<td><%= link_to post.title, post_path(post)%></td>
+		<td><%= link_to "修改", edit_post_path(post)%></td>
+		<td><%= link_to "删除", post_path(post), method: :delete, data: {confirm: "你确定要删除这条信息么"}%></td>
+  </tr>
 	  <% end %>
-	<% end %>
+  </table>
+	
+  <% end %>
 </div>
