--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,10 @@
 <div class="trade_detail container">
 	<div class="title_area col-md-8">
-		<div class="title col-md-10">
-		<h1><%= @post.title %></h1>
+		<div class="title col-md-9">
+		<h2><%= @post.title %></h2>
 		</div>
-		<div class="price col-md-2 pull-right">
-			<h1><%= @post.price %></h1>
+		<div class="price col-md-3 pull-right">
+			<h2><%= @post.price %> 元</h2>
 		</div>
 	</div>
 
