--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -6,10 +6,12 @@
 	background: white;
 	border-radius: 4px;
 	padding-bottom: 20px;
+  margin-right: 290px;
+  margin-bottom: 20px;
+  min-height: 600px;
 
 	.category {
-		margin-top: 10px;
-		padding-bottom: 10px;
+		padding: 10px;
 		border-bottom: solid 1px #e2e2e2;
 
 		a {
@@ -30,10 +32,8 @@
 	}
 
 	.tradeList {
-		padding-top: 5px;
-
 		.tradeItem {
-			padding: 10px 0px 10px 0px;
+			padding: 10px 0px 10px 10px;
 			border-bottom: solid 1px #e2e2e2;
 
 
@@ -43,7 +43,7 @@
 				color: #778087 !important;
 			}
 			.price {
-				display: inline-block;
+        float: right;
 				background: #778087;
 				color: white;
 				font-size: 16px;
@@ -51,6 +51,8 @@
 				border-radius: 15px;
 				margin: 0 auto;
 			  vertical-align: middle;
+        margin-right: 20px;
+        margin-top: 10px;
 			}
 
       .extra_info {
