--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,66 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>青大交易网</title>
-	<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-	<%= csrf_meta_tags %>
+  <title>青大交易网</title>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= csrf_meta_tags %>
   
-	<link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
-	<script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
+  <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-	<nav class="navbar navbar-default" role="navigation">
-		<div class="container">
-			
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<a class="navbar-brand" href="/">首页</a>
-			</div>
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="content">			
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">首页</a>
+      </div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<form class="navbar-form navbar-left" role="search">
-					<div class="form-group">
-						<input type="text" class="form-control" name="search" placeholder="搜索">
-					</div>
-				</form>
-				<ul class="nav navbar-nav navbar-right">
-					<% if user_signed_in? %>
-					  <li><a href="#">设置</a></li>
-				   	  <li><%= link_to "退出", destroy_user_session_path, method: :delete%></li>
-					<% else %>
-					  <li><%= link_to "注册", new_user_registration_path %></li>
-					  <li><%= link_to "登录", new_user_session_path %></li>
-					<% end %>
-				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div>
-	</nav>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" name="search" placeholder="搜索">
+          </div>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <% if user_signed_in? %>
+          <li><a href="#">设置</a></li>
+          <li><%= link_to "退出", destroy_user_session_path, method: :delete%></li>
+          <% else %>
+          <li><%= link_to "注册", new_user_registration_path %></li>
+          <li><%= link_to "登录", new_user_session_path %></li>
+          <% end %>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div>
+  </nav>
 	
-	<div class="container flash_messages">
-		<%if flash[:notice]%>
-	   	  <div class="alert alert-success alert-dismissable">
-		    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-			<%= flash[:notice]%>
-		  </div>
-		<% end %>
-		<%if flash[:alert]%>
-	   	  <div class="alert alert-danger alert-dismissable">
-		    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-			<%= flash[:alert]%>
-		  </div>
-		<% end %>
-	</div>
+  <div class="container flash_messages">
+    <%if flash[:notice]%>
+    <div class="alert alert-success alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <%= flash[:notice]%>
+    </div>
+    <% end %>
+    <%if flash[:alert]%>
+    <div class="alert alert-danger alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <%= flash[:alert]%>
+    </div>
+    <% end %>
+  </div>
 	
-	<div class="wrap">
-	  <%= yield %>
+  <div class="wrap">
+    <%= yield %>
   </div>
 		
 		
-	<div id="footer">
-		<%= link_to "关于", "#"%>
-	</div>
+  <div id="footer">
+    <div class="content">
+      All Rights Reserved
+    </div>
+  </div>
 </body>
 </html>
