--- a/app/views/posts/self.html.erb
+++ b/app/views/posts/self.html.erb
@@ -1,4 +1,4 @@
-<div class="container bg_white">
+<div class="bg_white">
 	
 	<ul class="nav nav-tabs">
 	  <li class="active"><%= link_to "显示中的帖子", posts_self_path %> </li>
@@ -11,9 +11,16 @@
 	</div>
 	<% else %>
   <table class="posts table table-hover">
+    <tr>
+      <th>标题</th>
+      <th>时间</th>
+      <th></th>
+      <th></th>
+    </tr>
 	<% @posts.each do | post | %>
   <tr>
 		<td><%= link_to post.title, post_path(post)%></td>
+    <td><%= post.created_at.strftime("%Y/%m/%d %H:%M") %></td>
 		<td><%= link_to "修改", edit_post_path(post)%></td>
 		<td><%= link_to "删除", post_path(post), method: :delete, data: {confirm: "你确定要删除这条信息么"}%></td>
   </tr>
