--- a/app/views/posts/self_deleted.html.erb
+++ b/app/views/posts/self_deleted.html.erb
@@ -1,4 +1,4 @@
-<div class="container bg_white">
+<div class="bg_white">
 	
 	<ul class="nav nav-tabs">
 	  <li><%= link_to "显示中的帖子", posts_self_path %> </li>
@@ -12,9 +12,14 @@
 	<% else %>
   
   <table class="posts table table-hover">
+    <tr>
+      <th>标题</th>
+      <th>时间</th>
+    </tr>
 	<% @posts.each do | post | %>
   <tr>
 		<td><%= link_to post.title, post_path(post)%></td>
+    <td><%= post.created_at.strftime("%Y/%m/%d %H:%M") %></td>
   </tr>
 	  <% end %>
   </table>
