--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,9 @@
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
+  
+  <div><%= f.label :nickname %><br />
+  <%= f.text_field :nickname %></div>
 
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
