--- a/app/views/home/_user_cell.html.erb
+++ b/app/views/home/_user_cell.html.erb
@@ -19,7 +19,7 @@
       <%= link_to "发贴", new_post_path %>
     </div>
     <div class="manage_posts">
-      <%= link_to "管理", posts_self_path %>
+      <%= link_to "管理", self_posts_path %>
     </div>
   </div>
   <% else %>
