--- a/app/views/posts/self_deleted.html.erb
+++ b/app/views/posts/self_deleted.html.erb
@@ -1,8 +1,8 @@
 <div class="bg_white">
 	
 	<ul class="nav nav-tabs">
-	  <li><%= link_to "显示中的帖子", posts_self_path %> </li>
-	  <li class="active"> <%= link_to "已删除的帖子", posts_self_deleted_path %> </li>
+	  <li><%= link_to "显示中的帖子", self_posts_path %> </li>
+	  <li class="active"> <%= link_to "已删除的帖子", deleted_posts_path %> </li>
 	</ul>
   
   
