--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,12 +18,19 @@
         <%= post.price.to_i %> 元
       </div>
       
+      <div class="avatar">
+        <%= image_tag post.user.avatar.url(:thumb) %>
+      </div>
+      
       <div class="title">
         <%= link_to post.title, post_path(post)%>
         <div class="extra_info">
           <div class="school">
             <% school = School.find post.school_id %>
             <%= link_to school.name, posts_path(school: school.id, tab: @tab) %>
+          </div>
+          <div class="author">
+            <%= link_to post.user.nickname, profile_path(id: post.user) %>
           </div>
           <div class="time">
             <%= time_ago_in_words post.created_at %>
