--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -10,5 +10,12 @@
 <div class="renren">
   人人地址: <%= f.text_field :renren_url %>
 </div>
+
+<div class="avatar">
+<%= image_tag @user.avatar.url(:medium) %>
+<%= image_tag @user.avatar.url(:thumb) %>
+
+<%= f.file_field :avatar%>
+</div>
 <%= f.submit "更改"%>
 <% end%>
