--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Profile#show</h1>
-<p>Find me in app/views/profile/show.html.erb</p>
+<%= image_tag @user.avatar.url(:medium) %>
+注册时间:<%= @user.created_at.strftime("%Y-%m-%d") %>
+发帖数：<%= @user.posts.count %>
