alter posts#price type from decimal to int

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
     <div class="tradeItem">
       
       <div class="price">
-        <%= post.price.to_i %> 元
+        <%= post.price %> 元
       </div>
       
       <div class="avatar">
