--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <form class="navbar-form navbar-left" role="search" action="/posts/search">
           <div class="form-group">
-            <input type="text" class="form-control" name="search" placeholder="搜索">
+            <input type="text" class="form-control" name="p" placeholder="搜索">
           </div>
         </form>
         <ul class="nav navbar-nav navbar-right">
@@ -38,7 +38,7 @@
     </div>
   </nav>
 	
-  <div class="container flash_messages">
+  <div class="flash_messages">
     <%if flash[:notice]%>
     <div class="alert alert-success alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
