change page background

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,7 +32,7 @@
 }
 
 body {
-	background: #e2e2e2 !important;
+	background: url("bg.png") !important;
 	font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti !important;
 }
 
