--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,43 +1,4 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
  *= require_self
- *= require_tree .
+ *= require public
  */
-
-
-#footer {
-  width: 100%;
-  background: white;
-  border-top: solid 1px #ccc;
-  margin-top: 20px;
-  
-  .content {
-    padding-top: 10px;
-    text-align: center;
-  }
-}
-
-#footer .content a{
-  font-size: 10px;
-  color: grey;
-  font-weight: bold;
-}
-
-body {
-	background: url("bg.png") !important;
-	font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti !important;
-}
-
-.wrap, nav .content, #footer .content{
-  width: 970px;
-  margin-left: auto;
-  margin-right: auto;
-}
