--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,15 +2,14 @@
 	background: white;
 	border-radius: 4px;
 	padding-bottom: 20px;
-  margin-right: 290px;
   margin-bottom: 20px;
-  min-height: 600px;
 
 	.category {
-		padding: 10px;
 		border-bottom: solid 1px #e2e2e2;
 
 		a {
+      display: inline-block;
+      margin: 5px 0 5px 10px;
 			color: black;
 			padding: 5px;
 			margin-right: 40px;
@@ -85,12 +84,16 @@
 
 
 .trade_detail {
+	background: white;
+  
 	.title_area {
-		background: white;
 		border-radius: 4px;
-		padding-bottom: 10px;
 		margin-bottom: 20px;
+    border-bottom: 1px solid #e2e2e2;
 
+    .avatar img {
+      margin: 5px 0 1px 10px;
+    }
     .title {
 			word-wrap:break-word;
     }
@@ -102,19 +105,18 @@
       color:#d0d0d0;
     }
 	}
-
-	.content_area {
-		background: white;
-		margin-bottom: 20px;
-	}
+  
+  .content_area {
+    border-bottom: 1px solid #e2e2e2;
+    padding-left: 10px;
+  }
 
 	.contact_area {
 		padding: 10px;
 		border-radius: 4px;
-
+		margin-bottom: 20px;
 
 		font-size: 20px;
-		background: white;
 	}
 }
 
