--- a/app/assets/stylesheets/public.css.scss
+++ b/app/assets/stylesheets/public.css.scss
@@ -11,16 +11,15 @@ html, body {
   background: white;
   border-top: solid 1px #ccc;
   
-  .content {
+  .container {
     padding-top: 10px;
-    text-align: center;
+    
+    a {
+      font-size: 10px;
+      color: grey;
+      font-weight: bold;      
+    }
   }
-}
-
-#footer .content a{
-  font-size: 10px;
-  color: grey;
-  font-weight: bold;
 }
 
 body {
@@ -28,18 +27,14 @@ body {
 	font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti !important;
 }
 
-.wrap, nav .content, #footer .content{
-  width: 970px;
-  margin-left: auto;
-  margin-right: auto;
+.container{
+  max-width: 970px;
 }
 
 .user_box {
 	background: white;
   height: 150px;
-  width: 270px;
   border-radius: 5px;
-  float: right;
   
   .name {
     font-size: 17px;
@@ -66,23 +61,21 @@ body {
   
   .cell {
     margin-top: 10px;
-    text-align: center;
     font-size: 20px;
     
     .new_post {
-      margin-left: 20px;
-      width: 40%;
-      display: inline-block;
-			border-right: solid 2px grey;
+			border-right: solid 1px grey;
+      
       a {
         color: red;
+        float: right;
+        margin-right: 15px;
       }
     }
     
     .manage_posts {
       display: inline-block;
-      margin-right: 20px;
-      width: 40%;
+      margin-left: 15px;
     }
   }
 }
