--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>青大交易网</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
+  <%= javascript_include_tag params[:controller] %>
+  <%= stylesheet_link_tag params[:controller] %>
+  <%= csrf_meta_tags %> 
   
   <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
   <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
-  <%= javascript_include_tag params[:controller] %>
-  <%= stylesheet_link_tag params[:controller] %>
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
+    <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
+  <![endif]-->
+  
+  <title><%= (yield :head).present? ? (yield :head) : APP_CONFIG["site_name"] %></title>
 </head>
 <body>
 
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="content">			
+  <nav class="navbar navbar-default narbar-static-top" role="navigation">
+    <div class="container">			
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
         <a class="navbar-brand" href="/">首页</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <form class="navbar-form navbar-left" role="search" action="/posts/search">
+      <div class="collapse navbar-collapse">
+        <form class="navbar-form navbar-left hidden-xs" role="search" action="/posts/search">
           <div class="form-group">
             <input type="text" class="form-control" name="p" placeholder="搜索">
           </div>
@@ -31,6 +46,8 @@
           <% if user_signed_in? %>
           <li><%= link_to "设置", edit_profile_path %></li>
           <li><%= link_to "退出", destroy_user_session_path, method: :delete%></li>
+          <li><%= link_to "管理", self_posts_path, class: "visible-xs" %></li>
+          <li><%= link_to "发贴", new_post_path, class: "visible-xs" %></li>
           <% else %>
           <li><%= link_to "注册", new_user_registration_path %></li>
           <li><%= link_to "登录", new_user_session_path %></li>
@@ -39,8 +56,10 @@
       </div><!-- /.navbar-collapse -->
     </div>
   </nav>
-	
+  
+  
   <div class="flash_messages">
+    <div class="container">
     <%if flash[:notice]%>
     <div class="alert alert-success alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
@@ -53,15 +72,16 @@
       <%= flash[:alert]%>
     </div>
     <% end %>
+    </div>
   </div>
 	
-  <div class="wrap">
+  <div class="container wrap">
     <%= yield %>
   </div>
 		
 		
   <div id="footer">
-    <div class="content">
+    <div class="container">
       All Rights Reserved
     </div>
   </div>
