--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,30 +1,40 @@
-<div class="trade_detail container">
-	<div class="title_area col-md-8">
-    <div class='avatar col-md-2'>
-      <%= image_tag @post.user.avatar.url(:medium) %>
-    </div>
-		<div class="title col-md-7">
-		<h2><%= @post.title %></h2>
-    <div class="other_info">
-      <span><%= link_to @post.user.nickname, profile_path(id: @post.user) %></span>
-      <span><%= time_ago_in_words @post.created_at %>发布</span>
-      <span>•&nbsp;<%= @post.hits %>点击</span>
-    </div>
-    </div>
-		<div class="price col-md-3 pull-right">
-			<h2><%= @post.price %> 元</h2>
-		</div>
-	</div>
+<div class="row">
+  <div class="col-md-8 col-sm-8 col-xs-12">
+    <div class="trade_detail">
+      <div class="title_area row">
+        <div class='avatar col-md-2 col-sm-2 col-xs-2'>
+          <%= image_tag @post.user.avatar.url(:medium), class: "img-responsive" %>
+        </div>
+        <div class="title col-md-7 col-sm-7 col-xs-7">
+          <h2><%= @post.title %></h2>
+          <div class="other_info">
+            <span><%= link_to @post.user.nickname, profile_path(id: @post.user) %></span>
+            <span><%= time_ago_in_words @post.created_at %>发布</span>
+            <span>•&nbsp;<%= @post.hits %>点击</span>
+          </div>
+        </div>
+        <div class="price col-md-3 col-sm-3 col-xs-3">
+          <h2><%= @post.price %> 元</h2>
+        </div>
+      </div>
 
-	<div class="content_area col-md-8">
-			<%= @post.content.html_safe %>
-	</div>
 
-	<div class="contact_area col-md-8">
-		<div class="contact">
-			联系方式: <a>点击显示</a>
-		</div>
-	</div>
+      <div class="content_area row">
+        <div class="col-md-12 col-xs-12 col-sm-12">
+        <%= @post.content.html_safe %>
+        </div>
+      </div>
+
+      <div class="contact_area row">
+        <div class="contact col-md-12 col-xs-12 col-sm-12">
+          联系方式: <a>点击显示</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-4 hidden-xs">
+    <%= render "public/user_cell"%>
+  </div>
 </div>
 
 <script>
@@ -41,3 +51,5 @@ var jiathis_config = {data_track_clickback:'true'};
 </script>
 <script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;uid=1394016066255274" charset="utf-8"></script>
 <!-- JiaThis Button END -->
+
+<% content_for(:head) { @post.title }%>
