--- a/app/views/public/_user_cell.html.erb
+++ b/app/views/public/_user_cell.html.erb
@@ -21,8 +21,19 @@
     <div class="manage_posts col-md-5">
       <%= link_to "管理", self_posts_path, class: "btn  btn-default" %>
     </div>
-  <% else %>
-  <%= link_to "登录", new_user_session_path %>
-  <% end %>
   </div>
+
+  <% else %>
+  <div class="unlogin">
+    <div class="welcome">
+     <p> 这里是一个自由的交易物品的社区</p>
+    </div>
+    <div class="register">
+      <%= link_to "注册", new_user_registration_path, class: "btn btn-info btn-lg" %>
+    </div>
+    <div class="login">
+      已有帐号,可<%= link_to "直接登录", new_user_session_path %>
+    </div>
+  </div>
+  <% end %>
 </div>
