--- a/app/views/posts/self.html.erb
+++ b/app/views/posts/self.html.erb
@@ -7,7 +7,8 @@
 	
 	
 	<% if @posts.blank? %>
-	<div>
+	<div class="blank_posts">
+    暂无
 	</div>
 	<% else %>
   <table class="posts table table-hover">
