--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -46,10 +46,10 @@ $(function(){
 </script>
 
 <!-- JiaThis Button BEGIN -->
-<script type="text/javascript">
-var jiathis_config = {data_track_clickback:'true'};
+<script type="text/javascript" data-turbolinks-track="true">
+  var jiathis_config = {data_track_clickback:'true'};
 </script>
-<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;uid=1394016066255274" charset="utf-8"></script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;uid=1394016066255274" charset="utf-8" data-turbolinks-track="true"></script>
 <!-- JiaThis Button END -->
 
 <% content_for(:head) { @post.title }%>
