--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -1,9 +1,28 @@
 .profile {
   background: white;
-  padding-bottom: 10px;
   border-radius: 5px;
   span {
     padding-top: 7px;
     display: inline-block;
   }
+}
+
+.display_user {
+  background: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  
+  img {
+    margin-left: 10px;
+  }
+  .extra_info {
+    color: #999;
+    font-size: 12px;
+  }
+}
+
+.tradeItem {
+  background: white;
 }
